<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@drawable/back_gradiant"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="-40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_your_sign_in_option"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:fontFamily="monospace"
            android:textStyle="bold"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/background"
        android:gravity="center">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <soup.neumorphism.NeumorphButton
        android:id="@+id/gmail"
        style="@style/Widget.Neumorph.Button"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:layout_marginTop="350dp"
        android:text="@string/gmail"
        android:layout_gravity="center_horizontal"
        app:neumorph_backgroundColor="#F6F6F6"
        app:neumorph_shadowElevation="5dp" />


        <soup.neumorphism.NeumorphButton
            android:id="@+id/fb"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="280dp"
            android:layout_height="80dp"
            android:text="@string/facebook"
            android:layout_gravity="center_horizontal"
            app:neumorph_backgroundColor="#F6F6F6"
            app:neumorph_shadowElevation="5dp" />

<!--        <soup.neumorphism.NeumorphButton-->
<!--            android:id="@+id/insta"-->
<!--            style="@style/Widget.Neumorph.Button"-->
<!--            android:layout_width="280dp"-->
<!--            android:layout_height="80dp"-->
<!--            android:text="@string/instagram"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            app:neumorph_backgroundColor="#F6F6F6"-->
<!--            app:neumorph_shadowElevation="5dp" />-->

    </LinearLayout>

</RelativeLayout>